--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
     <title>Methed cinema - онлайн-кинотеатр</title>
 
     <link rel="icon" href="img/me.svg">
-
+    <link rel="stylesheet" href="videotube/videotube.min.css">
     <link rel="stylesheet" href="style/style.css">
+    
     <script src="script/index.js" type="module"></script>
 
 </head>
@@ -49,7 +50,7 @@
                     <p class="film-week__title_origin">Spider-Man: No Way Home</p>
                 </div>
                 <h2 class="film-week__title">Человек-паук: Нет пути домой</h2>
-                <a class="film-week__watch-trailer tube" href="https://youtu.be/V0hagz_8L3M"
+                <a class="film-week__watch-trailer " href="https://youtu.be/V0hagz_8L3M"
                     aria-label="смотреть трейлер"></a>
             </div>
         </section>
